--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "swiftreader"
 version = "0.1.0"
 edition = "2021"
+description = "A bionic reading converter into epub, pdf and text"
+license = "MIT"
+repository = "https://github.com/fadumoaideed/swiftreader"
+documentation = "https://docs.rs/swiftreader"
+homepage = "https://github.com/fadumoaideed/swiftreader"
 
 [lib]
 crate-type = ["cdylib"]
